backend/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: kube-demo-backend
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /public
            port: 8080
